HW5: implement profiles for jdbc, jpa, datajpa in spring-db.xml, change ActiveDbProfileResolver

--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,5 +1,6 @@
-#database.url=jdbc:hsqldb:file:D:/temp/topjava
-
+# no pooling
+database.class=org.springframework.jdbc.datasource.DriverManagerDataSource
+database.driver_class_name=org.hsqldb.jdbcDriver
 database.url=jdbc:hsqldb:mem:topjava
 database.username=sa
 database.password=
