HW6: implement localization in all .jsp, fix issue with href and paths

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,11 +2,28 @@ app.title=Calories management
 app.home=Home
 app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> application
 app.login=Login as
+app.save=Save
+app.cancel=Cancel
 user.title=Users
 user.name=Name
 user.email=Email
 user.roles=Roles
 user.active=Active
 user.registered=Registered
-meal.title=Meals
+meal.meals=Meals
+meal.meal=Meal
+meal.datetime=Date/Time
+meal.fromdate=From Date (inclusive)
+meal.todate=To Date (inclusive)
+meal.fromtime=From Time (inclusive)
+meal.totime=To Time (exclusive)
+meal.filter=Filter
+meal.addmeal=Add meal
+meal.date=Date
+meal.description=Description
+meal.calories=Calories
+meal.update=Update
+meal.delete=Delete
+meal.newmeal=New meal
+meal.editmeal=Edit meal
 common.select=Select
