--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,6 +1,6 @@
 app.title=Calories management
 app.home=Home
-app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a> application
+app.footer=Internship <a href="https://github.com/JavaOPs/topjava" target=_blank>Spring 5/JPA Enterprise (Topjava)</a>
 app.login=Login as
 app.save=Save
 app.cancel=Cancel
