--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <!--    Tests  -->
         <junit.jupiter.version>5.9.1</junit.jupiter.version>
         <assertj.version>3.23.1</assertj.version>
-        <hamcrest.version>1.3</hamcrest.version>
+        <hamcrest.version>2.2</hamcrest.version>
     </properties>
 
     <build>
@@ -243,10 +243,11 @@
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+            <artifactId>hamcrest-core</artifactId>
             <version>${hamcrest.version}</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
