--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
         <junit.jupiter.version>5.9.1</junit.jupiter.version>
         <assertj.version>3.23.1</assertj.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <json-path.version>2.7.0</json-path.version>
     </properties>
 
     <build>
@@ -333,6 +334,13 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
             <scope>test</scope>
         </dependency>
 
