HW10: add exception processing for duplicate date/time of the meal

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -33,6 +33,7 @@ meal.endTime=To time (exclusive)
 meal.description=Description
 meal.dateTime=Date/Time
 meal.calories=Calories
+meal.existed.by.datetime=You already registered meal for that date/time
 
 common.add=Add
 common.select=Select
